syntax = "proto3";
option go_package = "./pb";
package pb;

import "google/protobuf/timestamp.proto";

message Video {
  int64 id = 1;
  string title = 2;
  int64 owner_id =3;
  string play_url = 4;
  string cover_url = 5;
}

message PublishVideoReq {
  string title = 1;
  int64 owner_id = 2;
  string play_url = 3;
  string cover_url = 4;
}

message PublishVideoResp {
  Video video = 1;
}

message VideoFeedReq {
  google.protobuf.Timestamp last_time_stamp = 1;
}

message VideoFeedResp {
  repeated Video videos = 1;
}

service videorpc {
    rpc PublishVideo (PublishVideoReq) returns (PublishVideoResp);
    rpc VideoFeed (VideoFeedReq) returns (VideoFeedResp);
}